--- a/StarCut/App.xaml
+++ b/StarCut/App.xaml
@@ -1,9 +1,13 @@
-﻿<Application x:Class="StarCut.App"
+﻿<!--StartupUri="MainWindow.xaml">-->
+<!--StartupUri="View/Login.xaml">-->
+
+<Application x:Class="StarCut.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:StarCut"
-             StartupUri="View/Login.xaml">
+             StartupUri="MainWindow.xaml">
+          
     <Application.Resources>
-         
+       
     </Application.Resources>
 </Application>
