Adiciona novo projeto WPF e atualiza interface
Este commit inclui a adição do projeto `StarCut_WPF`, que contém a nova interface do usuário com os controles `AgendaView` e `EstabelecimentoView`. Os botões "Agenda" e "Estabelecimento" no `MainWindow.xaml` agora possuem eventos de clique que chamam métodos específicos. O arquivo `StarCut.csproj` foi removido e substituído por `StarCut_WPF.csproj`, que contém as configurações do novo projeto.

Além disso, novos arquivos de imagem foram adicionados para melhorar a estética da interface, e a lógica para o formulário de login foi implementada com a adição de classes como `LoginForm` e `MainForm`. Recursos de imagem também foram atualizados para incluir o logo da aplicação.

--- a/StarCut/MainWindow.xaml
+++ b/StarCut/MainWindow.xaml
@@ -56,8 +56,8 @@
             <TextBlock Text="StarCut" Foreground="{StaticResource TextColor}" 
                        FontSize="30" FontWeight="Bold" Margin="10,20,10,30" Padding="10"/>
 
-            <Button Style="{StaticResource MenuButtonStyle}" Content="Agenda"/>
-            <Button Style="{StaticResource MenuButtonStyle}" Content="Estabelecimento"/>
+            <Button Style="{StaticResource MenuButtonStyle}" Content="Agenda" Click="AgendaButton_Click"/>
+            <Button Style="{StaticResource MenuButtonStyle}" Content="Estabelecimento" Click="EstabelecimentoButton_Click" Cursor="Hand"/>
             <Button Style="{StaticResource MenuButtonStyle}" Content="Financeiro"/>
             <Button Style="{StaticResource MenuButtonStyle}" Content="Relatórios"/>
             <Button Style="{StaticResource MenuButtonStyle}" Content="Marketing"/>
@@ -66,7 +66,9 @@
 
         <!-- Área Principal -->
         <Grid Grid.Column="1" Background="White">
+            
             <!-- Conteúdo será exibido aqui -->
+            <ContentControl x:Name="MainContentControl" Grid.Column="1" Background="White"/>
         </Grid>
     </Grid>
 </Window>
